--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                 <tr>
                   <td>Hobi</td>
                   <td>:</td>
-                  <td>Jajan</td>
+                  <td>Menulis</td>
                 </tr>
               </tbody>
             </table>
